# winrmexec

./: README.md  _evil_winrmexec.py  pyproject.toml
