[project]
name = "winrmexec"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "impacket",
    "requests",
    "prompt_toolkit"
]

[tool.setuptools]
py-modules = ["_winrmexec", "_evil_winrmexec"]

[project.scripts]
"winrmexec.py" = "_winrmexec:main"
"evil_winrmexec.py" = "_evil_winrmexec:main"
